# AIML-Track

./: .gitignore  README.md  test.ipynb
00_Projects/rag-system/: pyproject.toml
00_Projects/rag-system/app/: config.py  main.py
00_Projects/rag-system/app/embeddings/: embedder.py
00_Projects/rag-system/app/ingestion/: chunker.py  loader.py
00_Projects/rag-system/app/llm/: generator.py
00_Projects/rag-system/app/retrieval/: retriever.py
00_Projects/rag-system/app/schemas/: chunk.py  document.py  query.py  response.py
00_Projects/rag-system/app/vectorstore/: pinecone_store.py
00_Projects/rag-system/data/raw/: sample.txt
02_langchain/: pyproject.toml
02_langchain/00_Models/01_ChatModels/: 01.py
02_langchain/01_Components/00_Prompts /: app.py
02_langchain/01_Components/01_Document_Loaders /: 500_word_paragraph.txt  Loaders.ipynb  Loaders_1.ipynb
02_langchain/01_Components/02_Text_Splitting/: 01_Recursive.ipynb  02_character_text_splitter.ipynb  03_HTML_splitter.ipynb
02_langchain/01_Components/03_Embeddings/: 01_embeddings.ipynb  speech.txt
02_langchain/01_Components/03_Embeddings/faiss_index/: index.faiss  index.pkl
02_langchain/01_Components/04_Messages/: 00_messages.py  01_Dynamic_messages.py  02_message_history.py
02_langchain/01_Components/05_Structured_output/: 01_with_structured_output.py  02_pydantic.py
02_langchain/01_Components/06_output_parsers/: 01_strOutputParser.py  02_structuredOutputParsers.py
02_langchain/02_Chains/: 01_simple_chains.py  02_sequential_chain.ipynb
03_langGraph/: 00_test.ipynb  01_bmi_workflow.ipynb  (+8 more)
(+53 files in other folders)
